k8s/app-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-node-port
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30303
  selector:
      name: app
